Opened 7 years ago

Closed 6 years ago

#13730 closed bug (fixed)

BOutlineListView::EachItemUnder gets too many items

Reported by: jalopeura Owned by: nobody
Priority: normal Milestone: Unscheduled
Component: Kits/Interface Kit Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

EachItemUnder selects items that are not in fact under the superitem passed to the method.

Attachments (2)

OutlineListView_EachItemUnder.cpp (1.3 KB ) - added by jalopeura 7 years ago.
Simple program to reproduce the bug
OutlineListView_EachItemUnder.diff (660 bytes ) - added by jalopeura 7 years ago.

Download all attachments as: .zip

Change History (7)

by jalopeura, 7 years ago

Simple program to reproduce the bug

comment:1 by jalopeura, 7 years ago

patch: 01

by jalopeura, 7 years ago

comment:2 by pulkomandy, 7 years ago

The new implementation also excludes the SuperItem itself. This probably makes sense, but is there an undocumented BeOS quirk here?

Also, it seems strange that the function starts with an IndexOf but then use that index to access FullList* functions. I think that's a bug and FullListIndexOf should be used instead?

comment:3 by pulkomandy, 7 years ago

Migrated patch to Gerrit: https://review.haiku-os.org/52

comment:4 by pulkomandy, 7 years ago

patch: 10

comment:5 by waddlesplash, 6 years ago

Resolution: fixed
Status: newclosed

Merged in hrev52210.

Note: See TracTickets for help on using tickets.