BOutlineListView::EachItemUnder gets too many items

EachItemUnder selects items that are not in fact under the superitem
passed to the method.

ticket : #13730