src/kits/interface/OutlineListView.cpp
@@ -725,11 +725,12 @@ BOutlineListView::EachItemUnder(BListItem* superItem, bool oneLevelOnly,
 	if (i == -1)
 		return NULL;
 
+	i++; // skip the superitem
 	while (i < FullListCountItems()) {
 		BListItem* item = FullListItemAt(i);
 
 		// If we jump out of the subtree, return NULL
-		if (item->fLevel < superItem->OutlineLevel())
+		if (item->fLevel <= superItem->OutlineLevel())
 			return NULL;
 
 		// If the level matches, check the index
